@@ -208,9 +208,9 @@ let red_option          = reduct_option   (red_product,DEFAULTcast)
 let hnf_in_concl        = reduct_in_concl (hnf_constr,DEFAULTcast)
 let hnf_in_hyp          = reduct_in_hyp   hnf_constr
 let hnf_option          = reduct_option   (hnf_constr,DEFAULTcast)
-let simpl_in_concl      = reduct_in_concl (nf,DEFAULTcast)
-let simpl_in_hyp        = reduct_in_hyp   nf
-let simpl_option        = reduct_option   (nf,DEFAULTcast)
+let simpl_in_concl      = reduct_in_concl (simpl,DEFAULTcast)
+let simpl_in_hyp        = reduct_in_hyp   simpl
+let simpl_option        = reduct_option   (simpl,DEFAULTcast)
 let normalise_in_concl  = reduct_in_concl (compute,DEFAULTcast)
 let normalise_in_hyp    = reduct_in_hyp   compute
 let normalise_option    = reduct_option   (compute,DEFAULTcast)
