@@ -1,0 +1,4 @@
+     = a
+     : nat
+     = n + 0
+     : nat
